source/style/main.css
/* ... */
  
  /**
   * 1. Correct the odd appearance in Chrome and Safari.
   * 2. Correct the outline style in Safari.
   */
  [type="search"] {
    -webkit-appearance: textfield;
    /* 1 */
    outline-offset: -2px;
    /* 2 */
  }
  
  /**
   * Remove the inner padding in Chrome and Safari on macOS.
   */
  [type="search"]::-webkit-search-decoration {
    -webkit-appearance: none;
  }
  
  /**
   * 1. Correct the inability to style clickable types in iOS and Safari.
   * 2. Change font properties to `inherit` in Safari.
   */
  ::-webkit-file-upload-button {
    -webkit-appearance: button;
    /* 1 */
    font: inherit;
    /* 2 */
  }
  
  /* Interactive
     ========================================================================== */
  /*
   * Add the correct display in Edge, IE 10+, and Firefox.
   */
  details {
    display: block;
  }
  
  /*
   * Add the correct display in all browsers.
   */
  summary {
    display: list-item;
  }
  
  /* Misc
     ========================================================================== */
  /**
   * Add the correct display in IE 10+.
   */
  template {
    display: none;
  }
  
  /**
   * Add the correct display in IE 10.
   */
  [hidden] {
    display: none;
  }
  
  /**
  * For all elements: add correct box-sizing, delete all margins
  */
  * {
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    margin: 0;
  }
  
  /**
  * Reset active & focus styl4s for button & input
  */
  button:active,
  input:active,
  button:focus,
  input:focus {
    outline: none;
  }

@media screen and (max-width: 375px){
    .navigation {
        display: none;
    }
}

@media screen and (max-width: 375px){
    .wrap {
        height: 100vh;
    }
    
    
    .header {
        width: 100%;
        background: linear-gradient(to bottom, #de6262,#dd5e89);
    }

    .base__layout {
        width: 100%;
        margin-left: 0px;
    }

    .body__layout {
        width: 100%;
        flex-wrap: wrap;
    }

    .main, .upper__container-left-image, .upper__container, .upper__container-left, .upper__container-right, .footer__lower-container, .lower__container-right, .horizontal__upper-container, .horizontal__lower-container__left, .horizontal__lower-container__right, .horizontal__lower-container, .horizontal__upper-container__blocks, .container, .horizontal__upper-container__inner {
        flex-wrap: wrap;
        width: 100%;
    }

    .lower__container-left__right-part, .lower__container-left__header, .__inner-block-text, .__right-part__inner-block, .__right-part__inner-blocks {
        width: 100%;
        flex-wrap: wrap;
        
    }

    .lower__container-left__left-part {
        display: flex;
    }

    .upper__container-left__header-buttons {
        margin: 0 auto;
        width: 100%;
    }
    .header__list, .header__kendall-title, .header__kendall-text, .header__first-button, .header__input, .header__kendall-button  {
        display: none;
    }

    .header__img-kendall { 
        border: 1px solid black;
        display: inline;
    }

    .statistics, .statistics__list {
        width: 100%;
        flex-wrap: wrap;
    }

    .footer__social-icons {
        width: 100%;
        display: flex;
    }

    .sidebar__input-form {
        width: 100%;
    }

    .sidebar, .sidebar__header, .sidebar__header-items, .sidebar__body, .sidebar__body-row {
        width: 100%;
    }

    .sidebar__body-row {
        padding: 0px 15px 0px 0px;
    }

    .sidebar {
        height: 100%;
    }
}

